fix minor styling issue on desktop that caused upvotes to be overlapped

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -507,7 +507,7 @@ body {
                     }
                     .questions {
                         overflow-y: scroll;
-                        height: 92%;
+                        height: 90%;
                     }
                     .question {
                         background-color: @white;
@@ -515,9 +515,10 @@ body {
                         box-shadow: @float-box-shadow;
                         padding: @triple-space;
                         margin: @single-space;
-                        text-align: center;
                         .question-content {
                             display: inline-block;
+                            text-align: left;
+                            width: 80%;
                         }
                         .upvotes {
                             text-align: center;
